// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityCard component should not render data stream security selector for the record if no datastreams found 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={false}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecurityCard component should render security card correctly for collection with data stream selector for collection 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Collection
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={true}
            fieldName="securitySection.rek_security_policy"
            recordType="collection"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "dataStreamFieldLabel": <span>
                  Override datastream level policy to apply to the 
                  <b>
                    datastream
                  </b>
                   of this PID
                </span>,
                "dataStreamSelectedTitle": <span>
                  Current collection 
                  <b>
                    datastream
                  </b>
                   level security policy details
                </span>,
                "description": "",
                "fieldLabel": "Override collection level policy to apply to this PID",
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Current collection level security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={true}
            fieldName="securitySection.rek_datastream_policy"
            recordType="collection"
            securityPolicy={5}
            securitySelectorId="rek-datastream-policy"
            text={
              Object {
                "fieldLabel": <span>
                  Override datastream level policy to apply to the 
                  <b>
                    datastream
                  </b>
                   of this PID
                </span>,
                "prompt": "Select a security policy to apply",
                "selectedTitle": <span>
                  Current collection 
                  <b>
                    datastream
                  </b>
                   level security policy details
                </span>,
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecurityCard component should render security card correctly for community 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Community
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={false}
            fieldName="securitySection.rek_security_policy"
            recordType="community"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "description": "",
                "fieldLabel": "Override community level policy to apply to this PID",
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Selected community record security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecurityCard component should render security card correctly for record type 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={false}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="datastream-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Datastream
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={1}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_datastream_policy"
            title="Inherited datastream security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            attachedDataStreams={
              Array [
                Object {
                  "dsi_dsid": "test1.txt",
                  "dsi_security_policy": 1,
                },
              ]
            }
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": [Function],
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "Naked": [Function],
                  "displayName": "WithStyles(DataStreamSecuritySelector)",
                  "options": Object {
                    "defaultTheme": Object {
                      "breakpoints": Object {
                        "between": [Function],
                        "down": [Function],
                        "keys": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "only": [Function],
                        "up": [Function],
                        "values": Object {
                          "lg": 1280,
                          "md": 960,
                          "sm": 600,
                          "xl": 1920,
                          "xs": 0,
                        },
                        "width": [Function],
                      },
                      "direction": "ltr",
                      "mixins": Object {
                        "gutters": [Function],
                        "toolbar": Object {
                          "@media (min-width:0px) and (orientation: landscape)": Object {
                            "minHeight": 48,
                          },
                          "@media (min-width:600px)": Object {
                            "minHeight": 64,
                          },
                          "minHeight": 56,
                        },
                      },
                      "overrides": Object {},
                      "palette": Object {
                        "action": Object {
                          "activatedOpacity": 0.12,
                          "active": "rgba(0, 0, 0, 0.54)",
                          "disabled": "rgba(0, 0, 0, 0.26)",
                          "disabledBackground": "rgba(0, 0, 0, 0.12)",
                          "disabledOpacity": 0.38,
                          "focus": "rgba(0, 0, 0, 0.12)",
                          "focusOpacity": 0.12,
                          "hover": "rgba(0, 0, 0, 0.04)",
                          "hoverOpacity": 0.04,
                          "selected": "rgba(0, 0, 0, 0.08)",
                          "selectedOpacity": 0.08,
                        },
                        "augmentColor": [Function],
                        "background": Object {
                          "default": "#fafafa",
                          "paper": "#fff",
                        },
                        "common": Object {
                          "black": "#000",
                          "white": "#fff",
                        },
                        "contrastThreshold": 3,
                        "divider": "rgba(0, 0, 0, 0.12)",
                        "error": Object {
                          "contrastText": "#fff",
                          "dark": "#d32f2f",
                          "light": "#e57373",
                          "main": "#f44336",
                        },
                        "getContrastText": [Function],
                        "grey": Object {
                          "100": "#f5f5f5",
                          "200": "#eeeeee",
                          "300": "#e0e0e0",
                          "400": "#bdbdbd",
                          "50": "#fafafa",
                          "500": "#9e9e9e",
                          "600": "#757575",
                          "700": "#616161",
                          "800": "#424242",
                          "900": "#212121",
                          "A100": "#d5d5d5",
                          "A200": "#aaaaaa",
                          "A400": "#303030",
                          "A700": "#616161",
                        },
                        "info": Object {
                          "contrastText": "#fff",
                          "dark": "#1976d2",
                          "light": "#64b5f6",
                          "main": "#2196f3",
                        },
                        "primary": Object {
                          "contrastText": "#fff",
                          "dark": "#303f9f",
                          "light": "#7986cb",
                          "main": "#3f51b5",
                        },
                        "secondary": Object {
                          "contrastText": "#fff",
                          "dark": "#c51162",
                          "light": "#ff4081",
                          "main": "#f50057",
                        },
                        "success": Object {
                          "contrastText": "rgba(0, 0, 0, 0.87)",
                          "dark": "#388e3c",
                          "light": "#81c784",
                          "main": "#4caf50",
                        },
                        "text": Object {
                          "disabled": "rgba(0, 0, 0, 0.38)",
                          "hint": "rgba(0, 0, 0, 0.38)",
                          "primary": "rgba(0, 0, 0, 0.87)",
                          "secondary": "rgba(0, 0, 0, 0.54)",
                        },
                        "tonalOffset": 0.2,
                        "type": "light",
                        "warning": Object {
                          "contrastText": "rgba(0, 0, 0, 0.87)",
                          "dark": "#f57c00",
                          "light": "#ffb74d",
                          "main": "#ff9800",
                        },
                      },
                      "props": Object {},
                      "shadows": Array [
                        "none",
                        "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
                        "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                        "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
                        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                      ],
                      "shape": Object {
                        "borderRadius": 4,
                      },
                      "spacing": [Function],
                      "transitions": Object {
                        "create": [Function],
                        "duration": Object {
                          "complex": 375,
                          "enteringScreen": 225,
                          "leavingScreen": 195,
                          "short": 250,
                          "shorter": 200,
                          "shortest": 150,
                          "standard": 300,
                        },
                        "easing": Object {
                          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                        },
                        "getAutoHeightDuration": [Function],
                      },
                      "typography": Object {
                        "body1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00938em",
                          "lineHeight": 1.5,
                        },
                        "body2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.01071em",
                          "lineHeight": 1.43,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.02857em",
                          "lineHeight": 1.75,
                          "textTransform": "uppercase",
                        },
                        "caption": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.03333em",
                          "lineHeight": 1.66,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": 14,
                        "fontWeightBold": 700,
                        "fontWeightLight": 300,
                        "fontWeightMedium": 500,
                        "fontWeightRegular": 400,
                        "h1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "6rem",
                          "fontWeight": 300,
                          "letterSpacing": "-0.01562em",
                          "lineHeight": 1.167,
                        },
                        "h2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "3.75rem",
                          "fontWeight": 300,
                          "letterSpacing": "-0.00833em",
                          "lineHeight": 1.2,
                        },
                        "h3": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "3rem",
                          "fontWeight": 400,
                          "letterSpacing": "0em",
                          "lineHeight": 1.167,
                        },
                        "h4": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "2.125rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00735em",
                          "lineHeight": 1.235,
                        },
                        "h5": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1.5rem",
                          "fontWeight": 400,
                          "letterSpacing": "0em",
                          "lineHeight": 1.334,
                        },
                        "h6": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.0075em",
                          "lineHeight": 1.6,
                        },
                        "htmlFontSize": 16,
                        "overline": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.08333em",
                          "lineHeight": 2.66,
                          "textTransform": "uppercase",
                        },
                        "pxToRem": [Function],
                        "round": [Function],
                        "subtitle1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00938em",
                          "lineHeight": 1.75,
                        },
                        "subtitle2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.00714em",
                          "lineHeight": 1.57,
                        },
                      },
                      "zIndex": Object {
                        "appBar": 1100,
                        "drawer": 1200,
                        "mobileStepper": 1000,
                        "modal": 1300,
                        "snackbar": 1400,
                        "speedDial": 1050,
                        "tooltip": 1500,
                      },
                    },
                  },
                  "propTypes": Object {
                    "classes": [Function],
                    "innerRef": [Function],
                  },
                  "render": [Function],
                  "useStyles": [Function],
                },
              }
            }
            disabled={false}
            key="1"
            name="securitySection.dataStreams"
            text={
              Object {
                "cardTitle": [Function],
                "noDataStreams": "No datastreams to display",
                "overridePolicyPrompt": "Security policy for this file to override inheritance",
                "overridePrompt": "Override datastream security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecurityCard component should render security card correctly for record type if user checks override security 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={false}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={false}
            fieldName="securitySection.rek_security_policy"
            recordType="record"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "dataStream": Object {
                  "cardTitle": [Function],
                  "noDataStreams": "No datastreams to display",
                  "overridePolicyPrompt": "Security policy for this file to override inheritance",
                  "overridePrompt": "Override datastream security policy details",
                },
                "dataStreamFieldLabel": "Override work level policy to apply to this PID",
                "dataStreamSelectedTitle": "Selected work level datastream security policy details",
                "description": "",
                "fieldLabel": "Override work",
                "inheritedPolicy": Object {
                  "dataStream": Object {
                    "title": "Inherited datastream security policy details",
                  },
                  "record": Object {
                    "title": "Inherited security policy details",
                  },
                },
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Selected work level security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="datastream-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Datastream
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={1}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_datastream_policy"
            title="Inherited datastream security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            attachedDataStreams={
              Array [
                Object {
                  "dsi_dsid": "test2.txt",
                  "dsi_security_policy": 1,
                },
              ]
            }
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": [Function],
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "Naked": [Function],
                  "displayName": "WithStyles(DataStreamSecuritySelector)",
                  "options": Object {
                    "defaultTheme": Object {
                      "breakpoints": Object {
                        "between": [Function],
                        "down": [Function],
                        "keys": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "only": [Function],
                        "up": [Function],
                        "values": Object {
                          "lg": 1280,
                          "md": 960,
                          "sm": 600,
                          "xl": 1920,
                          "xs": 0,
                        },
                        "width": [Function],
                      },
                      "direction": "ltr",
                      "mixins": Object {
                        "gutters": [Function],
                        "toolbar": Object {
                          "@media (min-width:0px) and (orientation: landscape)": Object {
                            "minHeight": 48,
                          },
                          "@media (min-width:600px)": Object {
                            "minHeight": 64,
                          },
                          "minHeight": 56,
                        },
                      },
                      "overrides": Object {},
                      "palette": Object {
                        "action": Object {
                          "activatedOpacity": 0.12,
                          "active": "rgba(0, 0, 0, 0.54)",
                          "disabled": "rgba(0, 0, 0, 0.26)",
                          "disabledBackground": "rgba(0, 0, 0, 0.12)",
                          "disabledOpacity": 0.38,
                          "focus": "rgba(0, 0, 0, 0.12)",
                          "focusOpacity": 0.12,
                          "hover": "rgba(0, 0, 0, 0.04)",
                          "hoverOpacity": 0.04,
                          "selected": "rgba(0, 0, 0, 0.08)",
                          "selectedOpacity": 0.08,
                        },
                        "augmentColor": [Function],
                        "background": Object {
                          "default": "#fafafa",
                          "paper": "#fff",
                        },
                        "common": Object {
                          "black": "#000",
                          "white": "#fff",
                        },
                        "contrastThreshold": 3,
                        "divider": "rgba(0, 0, 0, 0.12)",
                        "error": Object {
                          "contrastText": "#fff",
                          "dark": "#d32f2f",
                          "light": "#e57373",
                          "main": "#f44336",
                        },
                        "getContrastText": [Function],
                        "grey": Object {
                          "100": "#f5f5f5",
                          "200": "#eeeeee",
                          "300": "#e0e0e0",
                          "400": "#bdbdbd",
                          "50": "#fafafa",
                          "500": "#9e9e9e",
                          "600": "#757575",
                          "700": "#616161",
                          "800": "#424242",
                          "900": "#212121",
                          "A100": "#d5d5d5",
                          "A200": "#aaaaaa",
                          "A400": "#303030",
                          "A700": "#616161",
                        },
                        "info": Object {
                          "contrastText": "#fff",
                          "dark": "#1976d2",
                          "light": "#64b5f6",
                          "main": "#2196f3",
                        },
                        "primary": Object {
                          "contrastText": "#fff",
                          "dark": "#303f9f",
                          "light": "#7986cb",
                          "main": "#3f51b5",
                        },
                        "secondary": Object {
                          "contrastText": "#fff",
                          "dark": "#c51162",
                          "light": "#ff4081",
                          "main": "#f50057",
                        },
                        "success": Object {
                          "contrastText": "rgba(0, 0, 0, 0.87)",
                          "dark": "#388e3c",
                          "light": "#81c784",
                          "main": "#4caf50",
                        },
                        "text": Object {
                          "disabled": "rgba(0, 0, 0, 0.38)",
                          "hint": "rgba(0, 0, 0, 0.38)",
                          "primary": "rgba(0, 0, 0, 0.87)",
                          "secondary": "rgba(0, 0, 0, 0.54)",
                        },
                        "tonalOffset": 0.2,
                        "type": "light",
                        "warning": Object {
                          "contrastText": "rgba(0, 0, 0, 0.87)",
                          "dark": "#f57c00",
                          "light": "#ffb74d",
                          "main": "#ff9800",
                        },
                      },
                      "props": Object {},
                      "shadows": Array [
                        "none",
                        "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
                        "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                        "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
                        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                      ],
                      "shape": Object {
                        "borderRadius": 4,
                      },
                      "spacing": [Function],
                      "transitions": Object {
                        "create": [Function],
                        "duration": Object {
                          "complex": 375,
                          "enteringScreen": 225,
                          "leavingScreen": 195,
                          "short": 250,
                          "shorter": 200,
                          "shortest": 150,
                          "standard": 300,
                        },
                        "easing": Object {
                          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                        },
                        "getAutoHeightDuration": [Function],
                      },
                      "typography": Object {
                        "body1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00938em",
                          "lineHeight": 1.5,
                        },
                        "body2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.01071em",
                          "lineHeight": 1.43,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.02857em",
                          "lineHeight": 1.75,
                          "textTransform": "uppercase",
                        },
                        "caption": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.03333em",
                          "lineHeight": 1.66,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": 14,
                        "fontWeightBold": 700,
                        "fontWeightLight": 300,
                        "fontWeightMedium": 500,
                        "fontWeightRegular": 400,
                        "h1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "6rem",
                          "fontWeight": 300,
                          "letterSpacing": "-0.01562em",
                          "lineHeight": 1.167,
                        },
                        "h2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "3.75rem",
                          "fontWeight": 300,
                          "letterSpacing": "-0.00833em",
                          "lineHeight": 1.2,
                        },
                        "h3": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "3rem",
                          "fontWeight": 400,
                          "letterSpacing": "0em",
                          "lineHeight": 1.167,
                        },
                        "h4": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "2.125rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00735em",
                          "lineHeight": 1.235,
                        },
                        "h5": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1.5rem",
                          "fontWeight": 400,
                          "letterSpacing": "0em",
                          "lineHeight": 1.334,
                        },
                        "h6": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.0075em",
                          "lineHeight": 1.6,
                        },
                        "htmlFontSize": 16,
                        "overline": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.08333em",
                          "lineHeight": 2.66,
                          "textTransform": "uppercase",
                        },
                        "pxToRem": [Function],
                        "round": [Function],
                        "subtitle1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00938em",
                          "lineHeight": 1.75,
                        },
                        "subtitle2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.00714em",
                          "lineHeight": 1.57,
                        },
                      },
                      "zIndex": Object {
                        "appBar": 1100,
                        "drawer": 1200,
                        "mobileStepper": 1000,
                        "modal": 1300,
                        "snackbar": 1400,
                        "speedDial": 1050,
                        "tooltip": 1500,
                      },
                    },
                  },
                  "propTypes": Object {
                    "classes": [Function],
                    "innerRef": [Function],
                  },
                  "render": [Function],
                  "useStyles": [Function],
                },
              }
            }
            disabled={false}
            key="1"
            name="securitySection.dataStreams"
            text={
              Object {
                "cardTitle": [Function],
                "noDataStreams": "No datastreams to display",
                "overridePolicyPrompt": "Security policy for this file to override inheritance",
                "overridePrompt": "Override datastream security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`SecurityCard component should render security card with disabled inputs 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={true}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={true}
            fieldName="securitySection.rek_security_policy"
            recordType="record"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "dataStream": Object {
                  "cardTitle": [Function],
                  "noDataStreams": "No datastreams to display",
                  "overridePolicyPrompt": "Security policy for this file to override inheritance",
                  "overridePrompt": "Override datastream security policy details",
                },
                "dataStreamFieldLabel": "Override work level policy to apply to this PID",
                "dataStreamSelectedTitle": "Selected work level datastream security policy details",
                "description": "",
                "fieldLabel": "Override work",
                "inheritedPolicy": Object {
                  "dataStream": Object {
                    "title": "Inherited datastream security policy details",
                  },
                  "record": Object {
                    "title": "Inherited security policy details",
                  },
                },
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Selected work level security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="datastream-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Datastream
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={1}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_datastream_policy"
            title="Inherited datastream security policy details"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            attachedDataStreams={
              Array [
                Object {
                  "dsi_dsid": "test3.txt",
                  "dsi_security_policy": 1,
                },
              ]
            }
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": [Function],
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "Naked": [Function],
                  "displayName": "WithStyles(DataStreamSecuritySelector)",
                  "options": Object {
                    "defaultTheme": Object {
                      "breakpoints": Object {
                        "between": [Function],
                        "down": [Function],
                        "keys": Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ],
                        "only": [Function],
                        "up": [Function],
                        "values": Object {
                          "lg": 1280,
                          "md": 960,
                          "sm": 600,
                          "xl": 1920,
                          "xs": 0,
                        },
                        "width": [Function],
                      },
                      "direction": "ltr",
                      "mixins": Object {
                        "gutters": [Function],
                        "toolbar": Object {
                          "@media (min-width:0px) and (orientation: landscape)": Object {
                            "minHeight": 48,
                          },
                          "@media (min-width:600px)": Object {
                            "minHeight": 64,
                          },
                          "minHeight": 56,
                        },
                      },
                      "overrides": Object {},
                      "palette": Object {
                        "action": Object {
                          "activatedOpacity": 0.12,
                          "active": "rgba(0, 0, 0, 0.54)",
                          "disabled": "rgba(0, 0, 0, 0.26)",
                          "disabledBackground": "rgba(0, 0, 0, 0.12)",
                          "disabledOpacity": 0.38,
                          "focus": "rgba(0, 0, 0, 0.12)",
                          "focusOpacity": 0.12,
                          "hover": "rgba(0, 0, 0, 0.04)",
                          "hoverOpacity": 0.04,
                          "selected": "rgba(0, 0, 0, 0.08)",
                          "selectedOpacity": 0.08,
                        },
                        "augmentColor": [Function],
                        "background": Object {
                          "default": "#fafafa",
                          "paper": "#fff",
                        },
                        "common": Object {
                          "black": "#000",
                          "white": "#fff",
                        },
                        "contrastThreshold": 3,
                        "divider": "rgba(0, 0, 0, 0.12)",
                        "error": Object {
                          "contrastText": "#fff",
                          "dark": "#d32f2f",
                          "light": "#e57373",
                          "main": "#f44336",
                        },
                        "getContrastText": [Function],
                        "grey": Object {
                          "100": "#f5f5f5",
                          "200": "#eeeeee",
                          "300": "#e0e0e0",
                          "400": "#bdbdbd",
                          "50": "#fafafa",
                          "500": "#9e9e9e",
                          "600": "#757575",
                          "700": "#616161",
                          "800": "#424242",
                          "900": "#212121",
                          "A100": "#d5d5d5",
                          "A200": "#aaaaaa",
                          "A400": "#303030",
                          "A700": "#616161",
                        },
                        "info": Object {
                          "contrastText": "#fff",
                          "dark": "#1976d2",
                          "light": "#64b5f6",
                          "main": "#2196f3",
                        },
                        "primary": Object {
                          "contrastText": "#fff",
                          "dark": "#303f9f",
                          "light": "#7986cb",
                          "main": "#3f51b5",
                        },
                        "secondary": Object {
                          "contrastText": "#fff",
                          "dark": "#c51162",
                          "light": "#ff4081",
                          "main": "#f50057",
                        },
                        "success": Object {
                          "contrastText": "rgba(0, 0, 0, 0.87)",
                          "dark": "#388e3c",
                          "light": "#81c784",
                          "main": "#4caf50",
                        },
                        "text": Object {
                          "disabled": "rgba(0, 0, 0, 0.38)",
                          "hint": "rgba(0, 0, 0, 0.38)",
                          "primary": "rgba(0, 0, 0, 0.87)",
                          "secondary": "rgba(0, 0, 0, 0.54)",
                        },
                        "tonalOffset": 0.2,
                        "type": "light",
                        "warning": Object {
                          "contrastText": "rgba(0, 0, 0, 0.87)",
                          "dark": "#f57c00",
                          "light": "#ffb74d",
                          "main": "#ff9800",
                        },
                      },
                      "props": Object {},
                      "shadows": Array [
                        "none",
                        "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
                        "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                        "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
                        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                      ],
                      "shape": Object {
                        "borderRadius": 4,
                      },
                      "spacing": [Function],
                      "transitions": Object {
                        "create": [Function],
                        "duration": Object {
                          "complex": 375,
                          "enteringScreen": 225,
                          "leavingScreen": 195,
                          "short": 250,
                          "shorter": 200,
                          "shortest": 150,
                          "standard": 300,
                        },
                        "easing": Object {
                          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                        },
                        "getAutoHeightDuration": [Function],
                      },
                      "typography": Object {
                        "body1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00938em",
                          "lineHeight": 1.5,
                        },
                        "body2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.01071em",
                          "lineHeight": 1.43,
                        },
                        "button": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.02857em",
                          "lineHeight": 1.75,
                          "textTransform": "uppercase",
                        },
                        "caption": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.03333em",
                          "lineHeight": 1.66,
                        },
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": 14,
                        "fontWeightBold": 700,
                        "fontWeightLight": 300,
                        "fontWeightMedium": 500,
                        "fontWeightRegular": 400,
                        "h1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "6rem",
                          "fontWeight": 300,
                          "letterSpacing": "-0.01562em",
                          "lineHeight": 1.167,
                        },
                        "h2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "3.75rem",
                          "fontWeight": 300,
                          "letterSpacing": "-0.00833em",
                          "lineHeight": 1.2,
                        },
                        "h3": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "3rem",
                          "fontWeight": 400,
                          "letterSpacing": "0em",
                          "lineHeight": 1.167,
                        },
                        "h4": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "2.125rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00735em",
                          "lineHeight": 1.235,
                        },
                        "h5": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1.5rem",
                          "fontWeight": 400,
                          "letterSpacing": "0em",
                          "lineHeight": 1.334,
                        },
                        "h6": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.0075em",
                          "lineHeight": 1.6,
                        },
                        "htmlFontSize": 16,
                        "overline": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.08333em",
                          "lineHeight": 2.66,
                          "textTransform": "uppercase",
                        },
                        "pxToRem": [Function],
                        "round": [Function],
                        "subtitle1": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "1rem",
                          "fontWeight": 400,
                          "letterSpacing": "0.00938em",
                          "lineHeight": 1.75,
                        },
                        "subtitle2": Object {
                          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                          "fontSize": "0.875rem",
                          "fontWeight": 500,
                          "letterSpacing": "0.00714em",
                          "lineHeight": 1.57,
                        },
                      },
                      "zIndex": Object {
                        "appBar": 1100,
                        "drawer": 1200,
                        "mobileStepper": 1000,
                        "modal": 1300,
                        "snackbar": 1400,
                        "speedDial": 1050,
                        "tooltip": 1500,
                      },
                    },
                  },
                  "propTypes": Object {
                    "classes": [Function],
                    "innerRef": [Function],
                  },
                  "render": [Function],
                  "useStyles": [Function],
                },
              }
            }
            disabled={true}
            key="1"
            name="securitySection.dataStreams"
            text={
              Object {
                "cardTitle": [Function],
                "noDataStreams": "No datastreams to display",
                "overridePolicyPrompt": "Security policy for this file to override inheritance",
                "overridePrompt": "Override datastream security policy details",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
